k8s/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: springboot 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot 
    spec:
      containers:
        - name: springboot 
          image: zeinsss/springbootapp:v7
          ports:
          - containerPort: 80
