k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: loadbalancerl
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: springboot
